fix(authz): make AuthorizationResourceType's permission set immutable
Switch to Set.copyOf(...) to match ResourceType, so callers can't
mutate the backing set and change authorization semantics at
runtime. Also add AuthorizationResourceTypeTest, mirroring
ResourceTypeTest, so the two enums' supported-permission sets can't
silently drift apart unnoticed.

Addresses review feedback on #524.